Update .env.example with custom host and port configurations

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@
 OPENAI_API_KEY=""
 GOOGLE_API_KEY=""
 
+# API_HOST="your custom host and port"
+# OPENAI_API_URL="your custom host and port"
 HUGGING_CHAT_ID=""
