[FEAT] add HUGGING_CHAT_ALLOW_WEB_SEARCH env variable

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ GOOGLE_API_KEY=""
 # API_HOST="your custom host and port"
 # OPENAI_API_URL="your custom host and port"
 HUGGING_CHAT_ID=""
+HUGGING_CHAT_ALLOW_WEB_SEARCH=0
