[FEAT] Support ChatGPT Web feat: - use config.json to control huggingchat tools - huggingchat won't save conversation now

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@ GOOGLE_API_KEY=""
 
 # API_HOST="your custom host and port"
 # OPENAI_API_URL="your custom host and port"
-HUGGING_CHAT_ID=""
-HUGGING_CHAT_ALLOW_WEB_SEARCH=0
+
+HUGGING_CHAT_TOKEN="from https://huggingface.co/chat/ conversation API cookie 'hf-chat' value"
+
+USE_CHATGPT_WEB=1
+CHATGPT_WEB_SESSION_TOKEN="from https://chatgpt.com/api/auth/session cookie '__Secure-next-auth.session-token' value"
