--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./theb_ai/Theb_API.json:/app/theb_ai/Theb_API.json
+      - ./hugging_chat/config.json:/app/hugging_chat/config.json
       - ./generated_images:/app/generated_images
       - .env:/app/.env
     networks:
@@ -30,6 +31,7 @@ services:
         gpt-4-turbo,\
         gpt-4,\
         gpt-3.5-turbo,\
+        gpt-3.5,\
         gemini-1.5-pro-latest,\
         gemini-1.5-flash-latest,\
         gemini-pro,\
