--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,8 @@ docstring-inheritance==2.2.0
     # via webscout
 email-validator==2.1.1
     # via fastapi
+environs==11.0.0
+    # via -r requirements.in
 fake-useragent==1.5.1
     # via -r requirements.in
 fastapi==0.111.0
@@ -117,6 +119,8 @@ markdownify==0.12.1
     # via webscout
 markupsafe==2.1.5
     # via jinja2
+marshmallow==3.21.3
+    # via environs
 mdurl==0.1.2
     # via markdown-it-py
 multidict==6.0.5
@@ -132,7 +136,9 @@ orjson==3.10.3
 outcome==1.3.0.post0
     # via trio
 packaging==24.0
-    # via webdriver-manager
+    # via
+    #   marshmallow
+    #   webdriver-manager
 pillow==10.3.0
     # via -r requirements.in
 playsound==1.3.0
@@ -161,7 +167,7 @@ pysocks==1.7.1
     # via urllib3
 python-dotenv==1.0.1
     # via
-    #   -r requirements.in
+    #   environs
     #   uvicorn
     #   webdriver-manager
     #   webscout
