[FIX] resolve status 200 but still error message, some bug fix

--- a/requirements.in
+++ b/requirements.in
@@ -1,9 +1,10 @@
-requests
+fastapi
+pydantic>=2.7
 fake-useragent
+requests
 selenium
 webdriver-manager
 webscout
 tls-client
-fastapi
 pillow
 environs
