--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile
 #
+aiofiles==24.1.0
+    # via poe-api-wrapper
 aiohttp==3.9.5
     # via g4f
 aiosignal==1.3.1
@@ -26,6 +28,7 @@ attrs==23.2.0
 beautifulsoup4==4.12.3
     # via
     #   markdownify
+    #   poe-api-wrapper
     #   webscout
 brotli==1.1.0
     # via g4f
@@ -47,8 +50,6 @@ click==8.1.7
     #   webscout
 clipman==3.2.3
     # via webscout
-cloudscraper==1.2.71
-    # via poe-api-wrapper
 colorama==0.4.6
     # via
     #   halo
@@ -59,7 +60,7 @@ dnspython==2.6.1
     # via email-validator
 docstring-inheritance==2.2.0
     # via webscout
-email-validator==2.1.1
+email-validator==2.2.0
     # via fastapi
 environs==11.0.0
     # via -r requirements.in
@@ -69,13 +70,13 @@ fastapi==0.111.0
     # via -r requirements.in
 fastapi-cli==0.0.4
     # via fastapi
-filelock==3.14.0
+filelock==3.15.4
     # via tldextract
 frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-g4f==0.3.1.9
+g4f==0.3.2.0
     # via webscout
 googlebard1==2.1.4
     # via webscout
@@ -84,18 +85,25 @@ h11==0.14.0
     #   httpcore
     #   uvicorn
     #   wsproto
+h2==4.1.0
+    # via httpx
 halo==0.0.31
     # via webscout
 helpingai-t2==0.5
     # via webscout
+hpack==4.0.0
+    # via h2
 httpcore==1.0.5
     # via httpx
 httptools==0.6.1
     # via uvicorn
-httpx[socks]==0.27.0
+httpx[http2,socks]==0.27.0
     # via
     #   fastapi
     #   googlebard1
+    #   poe-api-wrapper
+hyperframe==6.0.1
+    # via h2
 idna==3.7
     # via
     #   anyio
@@ -128,14 +136,17 @@ multidict==6.0.5
     #   aiohttp
     #   yarl
 nest-asyncio==1.6.0
-    # via webscout
-orjson==3.10.3
+    # via
+    #   poe-api-wrapper
+    #   webscout
+orjson==3.10.5
     # via
     #   fastapi
+    #   poe-api-wrapper
     #   webscout
 outcome==1.3.0.post0
     # via trio
-packaging==24.0
+packaging==24.1
     # via
     #   marshmallow
     #   webdriver-manager
@@ -143,25 +154,24 @@ pillow==10.3.0
     # via -r requirements.in
 playsound==1.3.0
     # via webscout
-poe-api-wrapper==1.4.1
+poe-api-wrapper==1.5.9
     # via webscout
-prompt-toolkit==3.0.46
+prompt-toolkit==3.0.47
     # via googlebard1
 pycparser==2.22
     # via cffi
 pycryptodome==3.20.0
     # via g4f
-pydantic==2.7.3
+pydantic==2.7.4
     # via
+    #   -r requirements.in
     #   fastapi
     #   webscout
 pydantic-core==2.18.4
     # via pydantic
 pygments==2.18.0
     # via rich
-pyparsing==3.1.2
-    # via cloudscraper
-pyreqwest-impersonate==0.4.7
+pyreqwest-impersonate==0.4.8
     # via webscout
 pysocks==1.7.1
     # via urllib3
@@ -177,12 +187,13 @@ pyyaml==6.0.1
     # via
     #   uvicorn
     #   webscout
+quickjs==1.19.4
+    # via poe-api-wrapper
 regex==2024.5.15
     # via tiktoken
 requests==2.32.3
     # via
     #   -r requirements.in
-    #   cloudscraper
     #   g4f
     #   helpingai-t2
     #   requests-file
@@ -194,16 +205,14 @@ requests==2.32.3
 requests-file==2.1.0
     # via tldextract
 requests-toolbelt==1.0.0
-    # via
-    #   cloudscraper
-    #   poe-api-wrapper
+    # via poe-api-wrapper
 rich==13.3.4
     # via
     #   googlebard1
     #   poe-api-wrapper
     #   typer
     #   webscout
-selenium==4.21.0
+selenium==4.22.0
     # via
     #   -r requirements.in
     #   webscout
@@ -226,7 +235,7 @@ soupsieve==2.5
     # via beautifulsoup4
 spinners==0.0.24
     # via halo
-sse-starlette==2.1.0
+sse-starlette==2.1.2
     # via webscout
 starlette==0.37.2
     # via
@@ -254,7 +263,7 @@ trio-websocket==0.11.1
     # via selenium
 typer==0.12.3
     # via fastapi-cli
-typing-extensions==4.12.1
+typing-extensions==4.12.2
     # via
     #   fastapi
     #   pydantic
@@ -263,7 +272,7 @@ typing-extensions==4.12.1
     #   typer
 ujson==5.10.0
     # via fastapi
-urllib3[socks]==2.2.1
+urllib3[socks]==2.2.2
     # via
     #   requests
     #   selenium
@@ -281,12 +290,13 @@ webdriver-manager==4.0.1
     # via
     #   -r requirements.in
     #   webscout
-webscout==3.2
+webscout==3.5
     # via -r requirements.in
 websocket-client==1.8.0
     # via
     #   helpingai-t2
     #   poe-api-wrapper
+    #   selenium
 websockets==12.0
     # via uvicorn
 wsproto==1.2.0
