--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - llms_api
 
   chatgpt-next-web:
-    image: yidadaa/chatgpt-next-web:latest
+    image: yidadaa/chatgpt-next-web:v2.12.4
     container_name: chatgpt-next-web
     restart: unless-stopped
     depends_on:
@@ -29,6 +29,7 @@ services:
       CUSTOM_MODELS:
         "-all,\
         gpt-4o,\
+        gpt-4o-mini,\
         gpt-4-turbo,\
         gpt-4,\
         gpt-3.5-turbo,\
@@ -37,6 +38,7 @@ services:
         gemini-1.5-flash-latest,\
         gemini-pro,\
         gemini-pro-vision,\
+        claude-3-5-sonnet-20240620,\
         claude-3-opus-20240229,\
         claude-3-sonnet-20240229,\
         claude-3-haiku-20240307,\
