feat: Add support for Deepseek web model

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ HUGGING_CHAT_TOKEN="from https://huggingface.co/chat/ conversation API cookie 'h
 
 USE_CHATGPT_WEB=1
 CHATGPT_WEB_SESSION_TOKEN="from https://chatgpt.com/api/auth/session cookie '__Secure-next-auth.session-token' value"
+
+DEEPSEEK_BEARER_TOKEN="from https://chat.deepseek.com/api/v0/users/current request Authorization header after Bearer"
