--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - llms_api
 
   chatgpt-next-web:
-    image: yidadaa/chatgpt-next-web:v2.12.4
+    image: yidadaa/chatgpt-next-web
     container_name: chatgpt-next-web
     restart: unless-stopped
     depends_on:
@@ -28,51 +28,50 @@ services:
       ANTHROPIC_URL: http://llm-api-for-next-chat:5000/api/anthropic
       CUSTOM_MODELS:
         "-all,\
-        gpt-4o,\
-        gpt-4o-mini,\
-        gpt-4-turbo,\
-        gpt-4,\
-        gpt-3.5-turbo,\
-        gpt-3.5,\
-        gemma-2-9b,\
-        gemma-2-27b,\
-        gemini-1.5-pro-exp-0801,\
-        gemini-1.5-pro-latest,\
-        gemini-1.5-flash-latest,\
-        gemini-1.0-pro-latest,\
-        claude-3-5-sonnet-20240620,\
-        claude-3-opus-20240229,\
-        claude-3-sonnet-20240229,\
-        claude-3-haiku-20240307,\
-        llama-3.1-405b,\
-        llama-3.1-405b-instruct,\
-        llama-3.1-70b-instruct,\
-        llama-3.1-70b,\
-        llama-3.1-8b,\
-        llama-3-70b,\
-        llama-3-8b,\
-        mixtral-8x22b,\
-        mixtral-8x7b,\
-        mixtral-8x7b-instruct,\
-        mistral-7b,\
-        mistral-7b-instruct,\
-        wizardlm-2-8x22b,\
-        dbrx-instruct,\
-        qwen-2-72b,\
-        qwen-1.5-110b,\
-        qwen-1.5-72b,\
-        qwen-1.5-32b,\
-        qwen-1.5-14b,\
-        qwen-1.5-7b,\
-        deepseek-llm-67b,\
-        deepseek-chat,\
-        deepseek-code,\
-        yi-1.5-34b-chat,\
-        yi-34b,\
-        theb-ai,\
-        command-r-plus,\
-        nous-hermes-2-mixtral-8x7b-dpo,\
-        phi-3-mini-4k-instruct"
+        gpt-4o@OpenAI,\
+        gpt-4o-mini@OpenAI,\
+        gpt-4-turbo@OpenAI,\
+        gpt-4@OpenAI,\
+        gpt-3.5-turbo@OpenAI,\
+        gpt-3.5@OpenAI,\
+        gemma-2-9b@Gemma,\
+        gemma-2-27b@Gemma,\
+        gemini-1.5-pro-exp-0801@Google,\
+        gemini-1.5-pro-latest@Google,\
+        gemini-1.5-flash-latest@Google,\
+        gemini-1.0-pro-latest@Google,\
+        claude-3-5-sonnet-20240620@Anthropic,\
+        claude-3-opus-20240229@Anthropic,\
+        claude-3-sonnet-20240229@Anthropic,\
+        claude-3-haiku-20240307@Anthropic,\
+        llama-3.1-405b@Meta,\
+        llama-3.1-70b-instruct@Meta,\
+        llama-3.1-70b@Meta,\
+        llama-3.1-8b@Meta,\
+        llama-3-70b@Meta,\
+        llama-3-8b@Meta,\
+        mixtral-8x22b@Mistral,\
+        mixtral-8x7b@Mistral,\
+        mixtral-8x7b-instruct@Mistral,\
+        mistral-7b@Mistral,\
+        mistral-7b-instruct@Mistral,\
+        wizardlm-2-8x22b@WizardLM,\
+        dbrx-instruct@Databricks,\
+        qwen-2-72b@Qwen,\
+        qwen-1.5-110b@Qwen,\
+        qwen-1.5-72b@Qwen,\
+        qwen-1.5-32b@Qwen,\
+        qwen-1.5-14b@Qwen,\
+        qwen-1.5-7b@Qwen,\
+        deepseek-llm-67b@DeepSeek,\
+        deepseek-chat@DeepSeek,\
+        deepseek-code@DeepSeek,\
+        yi-1.5-34b-chat@01.AI,\
+        yi-34b@01.AI,\
+        theb-ai@TheB.AI,\
+        command-r-plus@CohereForAI,\
+        nous-hermes-2-mixtral-8x7b-dpo@NousResearch,\
+        phi-3-mini-4k-instruct@Microsoft"
     env_file:
       - .env
     networks:
