--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
         claude-3-opus-20240229@Anthropic,\
         claude-3-sonnet-20240229@Anthropic,\
         claude-3-haiku-20240307@Anthropic,\
+        llama-3.2-11b-vision-instruct@Meta,\
         llama-3.1-405b@Meta,\
         llama-3.1-70b-instruct@Meta,\
         llama-3.1-70b@Meta,\
@@ -56,11 +57,10 @@ services:
         llama-3-8b@Meta,\
         mixtral-8x22b@Mistral,\
         mixtral-8x7b@Mistral,\
-        mixtral-8x7b-instruct@Mistral,\
         mistral-7b@Mistral,\
-        mistral-7b-instruct@Mistral,\
         wizardlm-2-8x22b@WizardLM,\
         dbrx-instruct@Databricks,\
+        qwen-2.5-72b-instruct@Qwen,\
         qwen-2-72b@Qwen,\
         qwen-1.5-110b@Qwen,\
         qwen-1.5-72b@Qwen,\
@@ -72,9 +72,9 @@ services:
         deepseek-code@DeepSeek,\
         yi-34b@01.AI,\
         theb-ai@TheB.AI,\
-        command-r-plus@CohereForAI,\
-        nous-hermes-2-mixtral-8x7b-dpo@NousResearch,\
-        phi-3-mini-4k-instruct@Microsoft"
+        command-r-plus-08-2024@CohereForAI,\
+        hermes-3-llama-3.1-8b@NousResearch,\
+        phi-3.5-mini-instruct@Microsoft"
     env_file:
       - .env
     networks:
