--- a/requirements.txt
+++ b/requirements.txt
@@ -6,19 +6,20 @@
 #
 aiofiles==24.1.0
     # via poe-api-wrapper
-aiohappyeyeballs==2.3.5
+aiohappyeyeballs==2.4.3
     # via aiohttp
-aiohttp==3.10.3
+aiohttp==3.10.10
     # via g4f
 aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anyio==4.4.0
+anyio==4.6.2.post1
     # via
     #   httpx
     #   sse-starlette
     #   starlette
+    #   watchfiles
 appdirs==1.4.4
     # via webscout
 attrs==24.2.0
@@ -33,44 +34,57 @@ beautifulsoup4==4.12.3
     #   webscout
 brotli==1.1.0
     # via g4f
-certifi==2024.7.4
+certifi==2024.8.30
     # via
     #   curl-cffi
     #   httpcore
     #   httpx
     #   requests
     #   selenium
-cffi==1.17.0
+cffi==1.17.1
     # via curl-cffi
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
     # via requests
 click==8.1.7
     # via
+    #   typer
     #   uvicorn
     #   webscout
-clipman==3.2.3
+clipman==3.3.1
     # via webscout
+cloudscraper==1.2.71
+    # via g4f
 colorama==0.4.6
     # via
     #   halo
     #   log-symbols
-curl-cffi==0.7.1
+curl-cffi==0.7.3
+    # via
+    #   g4f
+    #   webscout
+dbus-next==0.2.3
+    # via clipman
+dnspython==2.7.0
+    # via email-validator
+docstring-inheritance==2.2.1
     # via webscout
-docstring-inheritance==2.2.0
-    # via webscout
+email-validator==2.2.0
+    # via fastapi
 environs==11.0.0
     # via -r requirements.in
 fake-useragent==1.5.1
     # via -r requirements.in
-fastapi==0.112.0
+fastapi[standard]==0.115.2
     # via -r requirements.in
-filelock==3.15.4
+fastapi-cli[standard]==0.0.5
+    # via fastapi
+filelock==3.16.1
     # via tldextract
 frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-g4f==0.3.2.3
+g4f==0.3.3.0
     # via webscout
 googlebard1==2.1.4
     # via webscout
@@ -87,22 +101,28 @@ helpingai-t2==0.5
     # via webscout
 hpack==4.0.0
     # via h2
-httpcore==1.0.5
+httpcore==1.0.6
     # via httpx
-httpx[http2,socks]==0.27.0
+httptools==0.6.2
+    # via uvicorn
+httpx[http2,socks]==0.27.2
     # via
+    #   fastapi
     #   googlebard1
     #   poe-api-wrapper
 hyperframe==6.0.1
     # via h2
-idna==3.7
+idna==3.10
     # via
     #   anyio
+    #   email-validator
     #   httpx
     #   requests
     #   tldextract
     #   trio
     #   yarl
+jinja2==3.1.4
+    # via fastapi
 log-symbols==0.0.14
     # via halo
 loguru==0.7.2
@@ -113,11 +133,13 @@ markdown-it-py==2.2.0
     # via rich
 markdownify==0.13.1
     # via webscout
-marshmallow==3.21.3
+markupsafe==3.0.1
+    # via jinja2
+marshmallow==3.22.0
     # via environs
 mdurl==0.1.2
     # via markdown-it-py
-multidict==6.0.5
+multidict==6.1.0
     # via
     #   aiohttp
     #   yarl
@@ -135,27 +157,31 @@ packaging==24.1
     # via
     #   marshmallow
     #   webdriver-manager
-pillow==10.4.0
+pillow==11.0.0
     # via -r requirements.in
 playsound==1.3.0
     # via webscout
-poe-api-wrapper==1.6.3
+poe-api-wrapper==1.6.9
     # via webscout
-prompt-toolkit==3.0.47
+prompt-toolkit==3.0.48
     # via googlebard1
+propcache==0.2.0
+    # via yarl
 pycparser==2.22
     # via cffi
-pycryptodome==3.20.0
+pycryptodome==3.21.0
     # via g4f
-pydantic==2.8.2
+pydantic==2.9.2
     # via
     #   -r requirements.in
     #   fastapi
     #   webscout
-pydantic-core==2.20.1
+pydantic-core==2.23.4
     # via pydantic
 pygments==2.18.0
     # via rich
+pyparsing==3.2.0
+    # via cloudscraper
 pyreqwest-impersonate==0.5.3
     # via webscout
 pysocks==1.7.1
@@ -163,17 +189,23 @@ pysocks==1.7.1
 python-dotenv==1.0.1
     # via
     #   environs
+    #   uvicorn
     #   webdriver-manager
     #   webscout
+python-multipart==0.0.12
+    # via fastapi
 pyyaml==6.0.2
-    # via webscout
+    # via
+    #   uvicorn
+    #   webscout
 quickjs==1.19.4
     # via poe-api-wrapper
-regex==2024.7.24
+regex==2024.9.11
     # via tiktoken
 requests==2.32.3
     # via
     #   -r requirements.in
+    #   cloudscraper
     #   g4f
     #   helpingai-t2
     #   requests-file
@@ -185,16 +217,21 @@ requests==2.32.3
 requests-file==2.1.0
     # via tldextract
 requests-toolbelt==1.0.0
-    # via poe-api-wrapper
+    # via
+    #   cloudscraper
+    #   poe-api-wrapper
 rich==13.3.4
     # via
     #   googlebard1
     #   poe-api-wrapper
+    #   typer
     #   webscout
-selenium==4.23.1
+selenium==4.25.0
     # via
     #   -r requirements.in
     #   webscout
+shellingham==1.5.4
+    # via typer
 six==1.16.0
     # via
     #   halo
@@ -214,15 +251,15 @@ spinners==0.0.24
     # via halo
 sse-starlette==2.1.3
     # via webscout
-starlette==0.37.2
+starlette==0.40.0
     # via
     #   fastapi
     #   sse-starlette
-termcolor==2.4.0
+termcolor==2.5.0
     # via
     #   halo
     #   webscout
-tiktoken==0.7.0
+tiktoken==0.8.0
     # via webscout
 tldextract==5.1.2
     # via webscout
@@ -238,18 +275,29 @@ trio==0.26.2
     #   trio-websocket
 trio-websocket==0.11.1
     # via selenium
+typer==0.12.5
+    # via fastapi-cli
 typing-extensions==4.12.2
     # via
+    #   curl-cffi
     #   fastapi
     #   pydantic
     #   pydantic-core
     #   selenium
-urllib3[socks]==2.2.2
+    #   typer
+urllib3[socks]==2.2.3
     # via
     #   requests
     #   selenium
-uvicorn==0.30.6
-    # via sse-starlette
+uvicorn[standard]==0.32.0
+    # via
+    #   fastapi
+    #   fastapi-cli
+    #   sse-starlette
+uvloop==0.21.0
+    # via uvicorn
+watchfiles==0.24.0
+    # via uvicorn
 wcwidth==0.2.13
     # via prompt-toolkit
 webdriver-manager==4.0.2
@@ -263,7 +311,9 @@ websocket-client==1.8.0
     #   helpingai-t2
     #   poe-api-wrapper
     #   selenium
+websockets==13.1
+    # via uvicorn
 wsproto==1.2.0
     # via trio-websocket
-yarl==1.9.4
+yarl==1.15.3
     # via aiohttp
