--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
         llama-3.2-11b-vision-instruct@Meta,\
         llama-3.1-405b@Meta,\
         llama-3.1-70b-instruct@Meta,\
+        llama-3.1-nemotron-70b-instruct@Nvidia,\
         llama-3.1-70b@Meta,\
         llama-3.1-8b@Meta,\
         llama-3-70b@Meta,\
