--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ aiofiles==24.1.0
     # via poe-api-wrapper
 aiohappyeyeballs==2.4.3
     # via aiohttp
-aiohttp==3.10.10
-    # via g4f
+aiohttp==3.10.11
+    # via
+    #   -r requirements.in
+    #   g4f
 aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.7.0
@@ -166,7 +168,9 @@ poe-api-wrapper==1.6.9
 prompt-toolkit==3.0.48
     # via googlebard1
 propcache==0.2.0
-    # via yarl
+    # via
+    #   aiohttp
+    #   yarl
 pycparser==2.22
     # via cffi
 pycryptodome==3.21.0
