--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@
 #
 aiofiles==24.1.0
     # via poe-api-wrapper
-aiohappyeyeballs==2.4.3
+aiohappyeyeballs==2.4.4
     # via aiohttp
-aiohttp==3.10.11
+aiohttp==3.11.9
     # via
     #   -r requirements.in
     #   g4f
@@ -54,39 +54,35 @@ click==8.1.7
     #   webscout
 clipman==3.3.1
     # via webscout
-cloudscraper==1.2.71
-    # via g4f
 colorama==0.4.6
     # via
     #   halo
     #   log-symbols
-curl-cffi==0.7.3
-    # via
-    #   g4f
-    #   webscout
+curl-cffi==0.7.4
+    # via webscout
 dbus-next==0.2.3
     # via clipman
 dnspython==2.7.0
     # via email-validator
-docstring-inheritance==2.2.1
+docstring-inheritance==2.2.2
     # via webscout
 email-validator==2.2.0
     # via fastapi
-environs==11.0.0
+environs==11.2.1
     # via -r requirements.in
 fake-useragent==1.5.1
     # via -r requirements.in
-fastapi[standard]==0.115.2
+fastapi[standard]==0.115.6
     # via -r requirements.in
 fastapi-cli[standard]==0.0.5
     # via fastapi
 filelock==3.16.1
     # via tldextract
-frozenlist==1.4.1
+frozenlist==1.5.0
     # via
     #   aiohttp
     #   aiosignal
-g4f==0.3.3.0
+g4f==0.3.8.1
     # via webscout
 googlebard1==2.1.4
     # via webscout
@@ -103,11 +99,11 @@ helpingai-t2==0.5
     # via webscout
 hpack==4.0.0
     # via h2
-httpcore==1.0.6
+httpcore==1.0.7
     # via httpx
-httptools==0.6.2
+httptools==0.6.4
     # via uvicorn
-httpx[http2,socks]==0.27.2
+httpx[http2,socks]==0.28.0
     # via
     #   fastapi
     #   googlebard1
@@ -133,11 +129,11 @@ lxml==5.3.0
     # via webscout
 markdown-it-py==2.2.0
     # via rich
-markdownify==0.13.1
+markdownify==0.14.1
     # via webscout
-markupsafe==3.0.1
+markupsafe==3.0.2
     # via jinja2
-marshmallow==3.22.0
+marshmallow==3.23.1
     # via environs
 mdurl==0.1.2
     # via markdown-it-py
@@ -147,15 +143,16 @@ multidict==6.1.0
     #   yarl
 nest-asyncio==1.6.0
     # via
+    #   g4f
     #   poe-api-wrapper
     #   webscout
-orjson==3.10.7
+orjson==3.10.12
     # via
     #   poe-api-wrapper
     #   webscout
 outcome==1.3.0.post0
     # via trio
-packaging==24.1
+packaging==24.2
     # via
     #   marshmallow
     #   webdriver-manager
@@ -163,11 +160,11 @@ pillow==11.0.0
     # via -r requirements.in
 playsound==1.3.0
     # via webscout
-poe-api-wrapper==1.6.9
+poe-api-wrapper==1.7.0
     # via webscout
 prompt-toolkit==3.0.48
     # via googlebard1
-propcache==0.2.0
+propcache==0.2.1
     # via
     #   aiohttp
     #   yarl
@@ -175,17 +172,15 @@ pycparser==2.22
     # via cffi
 pycryptodome==3.21.0
     # via g4f
-pydantic==2.9.2
+pydantic==2.10.3
     # via
     #   -r requirements.in
     #   fastapi
     #   webscout
-pydantic-core==2.23.4
+pydantic-core==2.27.1
     # via pydantic
 pygments==2.18.0
     # via rich
-pyparsing==3.2.0
-    # via cloudscraper
 pyreqwest-impersonate==0.5.3
     # via webscout
 pysocks==1.7.1
@@ -196,7 +191,7 @@ python-dotenv==1.0.1
     #   uvicorn
     #   webdriver-manager
     #   webscout
-python-multipart==0.0.12
+python-multipart==0.0.19
     # via fastapi
 pyyaml==6.0.2
     # via
@@ -204,12 +199,11 @@ pyyaml==6.0.2
     #   webscout
 quickjs==1.19.4
     # via poe-api-wrapper
-regex==2024.9.11
+regex==2024.11.6
     # via tiktoken
 requests==2.32.3
     # via
     #   -r requirements.in
-    #   cloudscraper
     #   g4f
     #   helpingai-t2
     #   requests-file
@@ -221,16 +215,18 @@ requests==2.32.3
 requests-file==2.1.0
     # via tldextract
 requests-toolbelt==1.0.0
-    # via
-    #   cloudscraper
-    #   poe-api-wrapper
+    # via poe-api-wrapper
 rich==13.3.4
     # via
     #   googlebard1
     #   poe-api-wrapper
     #   typer
     #   webscout
-selenium==4.25.0
+ruamel-yaml==0.18.6
+    # via -r requirements.in
+ruamel-yaml-clib==0.2.12
+    # via ruamel-yaml
+selenium==4.27.1
     # via
     #   -r requirements.in
     #   webscout
@@ -243,7 +239,6 @@ six==1.16.0
 sniffio==1.3.1
     # via
     #   anyio
-    #   httpx
     #   trio
 socksio==1.0.0
     # via httpx
@@ -255,7 +250,7 @@ spinners==0.0.24
     # via halo
 sse-starlette==2.1.3
     # via webscout
-starlette==0.40.0
+starlette==0.41.3
     # via
     #   fastapi
     #   sse-starlette
@@ -265,21 +260,21 @@ termcolor==2.5.0
     #   webscout
 tiktoken==0.8.0
     # via webscout
-tldextract==5.1.2
+tldextract==5.1.3
     # via webscout
 tls-client==1.0.1
     # via
     #   -r requirements.in
     #   webscout
-tqdm==4.66.5
+tqdm==4.67.1
     # via webscout
-trio==0.26.2
+trio==0.27.0
     # via
     #   selenium
     #   trio-websocket
 trio-websocket==0.11.1
     # via selenium
-typer==0.12.5
+typer==0.15.0
     # via fastapi-cli
 typing-extensions==4.12.2
     # via
@@ -293,14 +288,14 @@ urllib3[socks]==2.2.3
     # via
     #   requests
     #   selenium
-uvicorn[standard]==0.32.0
+uvicorn[standard]==0.32.1
     # via
     #   fastapi
     #   fastapi-cli
     #   sse-starlette
 uvloop==0.21.0
     # via uvicorn
-watchfiles==0.24.0
+watchfiles==1.0.0
     # via uvicorn
 wcwidth==0.2.13
     # via prompt-toolkit
@@ -315,9 +310,9 @@ websocket-client==1.8.0
     #   helpingai-t2
     #   poe-api-wrapper
     #   selenium
-websockets==13.1
+websockets==14.1
     # via uvicorn
 wsproto==1.2.0
     # via trio-websocket
-yarl==1.15.3
+yarl==1.18.3
     # via aiohttp
