--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,10 @@ services:
         gemma-2-27b@Gemma,\
         gemma-2-9b@Gemma,\
         learnlm-1.5-pro-experimental@Google,\
-        gemini-exp-1121@Google,\
+        gemini-exp-1206@Google,\
         gemini-1.5-pro-latest@Google,\
+        gemini-2.0-flash-thinking-exp-1219@Google,\
+        gemini-2.0-flash-exp@Google,\
         gemini-1.5-flash-latest@Google,\
         gemini-1.5-flash-8b-latest@Google,\
         claude-3-5-sonnet-20240620@Anthropic,\
