--- a/requirements.in
+++ b/requirements.in
@@ -1,12 +1,12 @@
 fastapi[standard]
 pydantic>=2.7
 fake-useragent
-requests
-selenium
-webdriver-manager
 webscout==3.5
 aiohttp>=3.10.11
 tls-client
 pillow
 environs
 ruamel.yaml
+seleniumbase
+python3-xlib
+pyautogui
