--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,17 @@
 #
 #    pip-compile
 #
-aiofiles==24.1.0
-    # via poe-api-wrapper
 aiohappyeyeballs==2.4.4
     # via aiohttp
-aiohttp==3.11.9
+aiohttp==3.11.11
     # via
     #   -r requirements.in
     #   g4f
-aiosignal==1.3.1
+aiosignal==1.3.2
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anyio==4.6.2.post1
+anyio==4.7.0
     # via
     #   httpx
     #   sse-starlette
@@ -24,31 +22,40 @@ anyio==4.6.2.post1
     #   watchfiles
 appdirs==1.4.4
     # via webscout
-attrs==24.2.0
+attrs==24.3.0
     # via
     #   aiohttp
     #   outcome
+    #   seleniumbase
     #   trio
 beautifulsoup4==4.12.3
     # via
     #   markdownify
-    #   poe-api-wrapper
+    #   seleniumbase
     #   webscout
+behave==1.2.6
+    # via seleniumbase
 brotli==1.1.0
     # via g4f
-certifi==2024.8.30
+certifi==2024.12.14
     # via
     #   curl-cffi
     #   httpcore
     #   httpx
     #   requests
     #   selenium
+    #   seleniumbase
 cffi==1.17.1
     # via curl-cffi
-charset-normalizer==3.4.0
-    # via requests
-click==8.1.7
+chardet==5.2.0
+    # via seleniumbase
+charset-normalizer==3.4.1
     # via
+    #   requests
+    #   seleniumbase
+click==8.1.8
+    # via
+    #   rich-toolkit
     #   typer
     #   uvicorn
     #   webscout
@@ -58,6 +65,9 @@ colorama==0.4.6
     # via
     #   halo
     #   log-symbols
+    #   seleniumbase
+cssselect==1.2.0
+    # via seleniumbase
 curl-cffi==0.7.4
     # via webscout
 dbus-next==0.2.3
@@ -70,97 +80,143 @@ email-validator==2.2.0
     # via fastapi
 environs==11.2.1
     # via -r requirements.in
-fake-useragent==1.5.1
+exceptiongroup==1.2.2
+    # via seleniumbase
+execnet==2.1.1
+    # via
+    #   pytest-xdist
+    #   seleniumbase
+fake-useragent==2.0.3
     # via -r requirements.in
 fastapi[standard]==0.115.6
     # via -r requirements.in
-fastapi-cli[standard]==0.0.5
+fastapi-cli[standard]==0.0.7
     # via fastapi
+fasteners==0.19
+    # via seleniumbase
 filelock==3.16.1
-    # via tldextract
+    # via
+    #   seleniumbase
+    #   tldextract
 frozenlist==1.5.0
     # via
     #   aiohttp
     #   aiosignal
-g4f==0.3.8.1
+g4f==0.3.9.7
     # via webscout
 googlebard1==2.1.4
     # via webscout
 h11==0.14.0
     # via
     #   httpcore
+    #   seleniumbase
     #   uvicorn
     #   wsproto
-h2==4.1.0
-    # via httpx
 halo==0.0.31
     # via webscout
 helpingai-t2==0.5
     # via webscout
-hpack==4.0.0
-    # via h2
 httpcore==1.0.7
     # via httpx
 httptools==0.6.4
     # via uvicorn
-httpx[http2,socks]==0.28.0
+httpx[socks]==0.28.1
     # via
     #   fastapi
     #   googlebard1
     #   poe-api-wrapper
-hyperframe==6.0.1
-    # via h2
 idna==3.10
     # via
     #   anyio
     #   email-validator
     #   httpx
     #   requests
+    #   seleniumbase
     #   tldextract
     #   trio
     #   yarl
-jinja2==3.1.4
-    # via fastapi
+iniconfig==2.0.0
+    # via
+    #   pytest
+    #   seleniumbase
+jinja2==3.1.5
+    # via
+    #   fastapi
+    #   pytest-html
+    #   seleniumbase
 log-symbols==0.0.14
     # via halo
-loguru==0.7.2
+loguru==0.7.3
     # via poe-api-wrapper
 lxml==5.3.0
     # via webscout
-markdown-it-py==2.2.0
-    # via rich
+markdown-it-py==3.0.0
+    # via
+    #   rich
+    #   seleniumbase
 markdownify==0.14.1
     # via webscout
 markupsafe==3.0.2
-    # via jinja2
-marshmallow==3.23.1
+    # via
+    #   jinja2
+    #   seleniumbase
+marshmallow==3.23.2
     # via environs
 mdurl==0.1.2
-    # via markdown-it-py
+    # via
+    #   markdown-it-py
+    #   seleniumbase
+mouseinfo==0.1.3
+    # via pyautogui
 multidict==6.1.0
     # via
     #   aiohttp
     #   yarl
+mycdp==1.1.0
+    # via seleniumbase
 nest-asyncio==1.6.0
     # via
     #   g4f
-    #   poe-api-wrapper
     #   webscout
 orjson==3.10.12
-    # via
-    #   poe-api-wrapper
-    #   webscout
+    # via webscout
 outcome==1.3.0.post0
-    # via trio
+    # via
+    #   seleniumbase
+    #   trio
 packaging==24.2
     # via
     #   marshmallow
+    #   pytest
+    #   pytest-rerunfailures
+    #   seleniumbase
     #   webdriver-manager
+parameterized==0.9.0
+    # via seleniumbase
+parse==1.20.2
+    # via
+    #   behave
+    #   parse-type
+    #   seleniumbase
+parse-type==0.6.4
+    # via
+    #   behave
+    #   seleniumbase
+pdbp==1.6.1
+    # via seleniumbase
 pillow==11.0.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   pyscreeze
+platformdirs==4.3.6
+    # via seleniumbase
 playsound==1.3.0
     # via webscout
-poe-api-wrapper==1.7.0
+pluggy==1.5.0
+    # via
+    #   pytest
+    #   seleniumbase
+poe-api-wrapper==1.3.6
     # via webscout
 prompt-toolkit==3.0.48
     # via googlebard1
@@ -168,46 +224,93 @@ propcache==0.2.1
     # via
     #   aiohttp
     #   yarl
+pyautogui==0.9.54
+    # via -r requirements.in
 pycparser==2.22
     # via cffi
 pycryptodome==3.21.0
     # via g4f
-pydantic==2.10.3
+pydantic==2.10.4
     # via
     #   -r requirements.in
     #   fastapi
     #   webscout
-pydantic-core==2.27.1
+pydantic-core==2.27.2
     # via pydantic
+pygetwindow==0.0.9
+    # via pyautogui
 pygments==2.18.0
-    # via rich
+    # via
+    #   pdbp
+    #   rich
+    #   seleniumbase
+pymsgbox==1.0.9
+    # via pyautogui
+pynose==1.5.3
+    # via seleniumbase
+pyotp==2.9.0
+    # via seleniumbase
+pyperclip==1.9.0
+    # via mouseinfo
+pyrect==0.2.0
+    # via pygetwindow
 pyreqwest-impersonate==0.5.3
     # via webscout
+pyscreeze==1.0.1
+    # via pyautogui
 pysocks==1.7.1
     # via urllib3
+pytest==8.3.4
+    # via
+    #   pytest-html
+    #   pytest-metadata
+    #   pytest-ordering
+    #   pytest-rerunfailures
+    #   pytest-xdist
+    #   seleniumbase
+pytest-html==4.0.2
+    # via seleniumbase
+pytest-metadata==3.1.1
+    # via
+    #   pytest-html
+    #   seleniumbase
+pytest-ordering==0.6
+    # via seleniumbase
+pytest-rerunfailures==15.0
+    # via seleniumbase
+pytest-xdist==3.6.1
+    # via seleniumbase
 python-dotenv==1.0.1
     # via
     #   environs
     #   uvicorn
     #   webdriver-manager
     #   webscout
-python-multipart==0.0.19
+python-multipart==0.0.20
     # via fastapi
+python-xlib==0.33
+    # via seleniumbase
+python3-xlib==0.15
+    # via
+    #   -r requirements.in
+    #   mouseinfo
+    #   pyautogui
+pytweening==1.2.0
+    # via pyautogui
 pyyaml==6.0.2
     # via
+    #   seleniumbase
     #   uvicorn
     #   webscout
-quickjs==1.19.4
-    # via poe-api-wrapper
 regex==2024.11.6
     # via tiktoken
 requests==2.32.3
     # via
-    #   -r requirements.in
     #   g4f
     #   helpingai-t2
     #   requests-file
     #   requests-toolbelt
+    #   seleniumbase
     #   tiktoken
     #   tldextract
     #   webdriver-manager
@@ -216,44 +319,64 @@ requests-file==2.1.0
     # via tldextract
 requests-toolbelt==1.0.0
     # via poe-api-wrapper
-rich==13.3.4
+rich==13.9.4
     # via
     #   googlebard1
-    #   poe-api-wrapper
+    #   rich-toolkit
+    #   seleniumbase
     #   typer
     #   webscout
+rich-toolkit==0.12.0
+    # via fastapi-cli
 ruamel-yaml==0.18.6
     # via -r requirements.in
 ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
+sbvirtualdisplay==1.4.0
+    # via seleniumbase
 selenium==4.27.1
     # via
-    #   -r requirements.in
+    #   seleniumbase
     #   webscout
+seleniumbase==4.33.12
+    # via -r requirements.in
 shellingham==1.5.4
     # via typer
-six==1.16.0
+six==1.17.0
     # via
+    #   behave
     #   halo
     #   markdownify
+    #   parse-type
+    #   python-xlib
+    #   seleniumbase
 sniffio==1.3.1
     # via
     #   anyio
+    #   seleniumbase
     #   trio
 socksio==1.0.0
     # via httpx
 sortedcontainers==2.4.0
-    # via trio
+    # via
+    #   seleniumbase
+    #   trio
 soupsieve==2.6
-    # via beautifulsoup4
+    # via
+    #   beautifulsoup4
+    #   seleniumbase
 spinners==0.0.24
     # via halo
-sse-starlette==2.1.3
+sse-starlette==2.2.0
     # via webscout
 starlette==0.41.3
     # via
     #   fastapi
     #   sse-starlette
+tabcompleter==1.4.0
+    # via
+    #   pdbp
+    #   seleniumbase
 termcolor==2.5.0
     # via
     #   halo
@@ -271,38 +394,42 @@ tqdm==4.67.1
 trio==0.27.0
     # via
     #   selenium
+    #   seleniumbase
     #   trio-websocket
 trio-websocket==0.11.1
-    # via selenium
-typer==0.15.0
+    # via
+    #   selenium
+    #   seleniumbase
+typer==0.15.1
     # via fastapi-cli
 typing-extensions==4.12.2
     # via
+    #   anyio
     #   curl-cffi
     #   fastapi
     #   pydantic
     #   pydantic-core
+    #   rich-toolkit
     #   selenium
+    #   seleniumbase
     #   typer
-urllib3[socks]==2.2.3
+urllib3[socks]==2.3.0
     # via
     #   requests
     #   selenium
-uvicorn[standard]==0.32.1
+    #   seleniumbase
+uvicorn[standard]==0.34.0
     # via
     #   fastapi
     #   fastapi-cli
-    #   sse-starlette
 uvloop==0.21.0
     # via uvicorn
-watchfiles==1.0.0
+watchfiles==1.0.3
     # via uvicorn
 wcwidth==0.2.13
     # via prompt-toolkit
 webdriver-manager==4.0.2
-    # via
-    #   -r requirements.in
-    #   webscout
+    # via webscout
 webscout==3.5
     # via -r requirements.in
 websocket-client==1.8.0
@@ -310,9 +437,20 @@ websocket-client==1.8.0
     #   helpingai-t2
     #   poe-api-wrapper
     #   selenium
+    #   seleniumbase
 websockets==14.1
-    # via uvicorn
+    # via
+    #   seleniumbase
+    #   uvicorn
+wheel==0.45.1
+    # via seleniumbase
 wsproto==1.2.0
-    # via trio-websocket
+    # via
+    #   seleniumbase
+    #   trio-websocket
 yarl==1.18.3
     # via aiohttp
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
