--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiohappyeyeballs==2.4.4
     # via aiohttp
-aiohttp==3.11.11
+aiohttp==3.11.12
     # via
     #   -r requirements.in
     #   g4f
@@ -14,7 +14,7 @@ aiosignal==1.3.2
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anyio==4.7.0
+anyio==4.8.0
     # via
     #   httpx
     #   sse-starlette
@@ -22,13 +22,13 @@ anyio==4.7.0
     #   watchfiles
 appdirs==1.4.4
     # via webscout
-attrs==24.3.0
+attrs==25.1.0
     # via
     #   aiohttp
     #   outcome
     #   seleniumbase
     #   trio
-beautifulsoup4==4.12.3
+beautifulsoup4==4.13.3
     # via
     #   markdownify
     #   seleniumbase
@@ -37,7 +37,7 @@ behave==1.2.6
     # via seleniumbase
 brotli==1.1.0
     # via g4f
-certifi==2024.12.14
+certifi==2025.1.31
     # via
     #   curl-cffi
     #   httpcore
@@ -78,7 +78,7 @@ docstring-inheritance==2.2.2
     # via webscout
 email-validator==2.2.0
     # via fastapi
-environs==11.2.1
+environs==14.1.0
     # via -r requirements.in
 exceptiongroup==1.2.2
     # via seleniumbase
@@ -88,13 +88,13 @@ execnet==2.1.1
     #   seleniumbase
 fake-useragent==2.0.3
     # via -r requirements.in
-fastapi[standard]==0.115.6
+fastapi[standard]==0.115.8
     # via -r requirements.in
 fastapi-cli[standard]==0.0.7
     # via fastapi
 fasteners==0.19
     # via seleniumbase
-filelock==3.16.1
+filelock==3.17.0
     # via
     #   seleniumbase
     #   tldextract
@@ -102,7 +102,7 @@ frozenlist==1.5.0
     # via
     #   aiohttp
     #   aiosignal
-g4f==0.3.9.7
+g4f==0.4.5.4
     # via webscout
 googlebard1==2.1.4
     # via webscout
@@ -135,6 +135,8 @@ idna==3.10
     #   tldextract
     #   trio
     #   yarl
+importlib-resources==6.5.2
+    # via wasmtime
 iniconfig==2.0.0
     # via
     #   pytest
@@ -160,7 +162,7 @@ markupsafe==3.0.2
     # via
     #   jinja2
     #   seleniumbase
-marshmallow==3.23.2
+marshmallow==3.26.1
     # via environs
 mdurl==0.1.2
     # via
@@ -178,7 +180,9 @@ nest-asyncio==1.6.0
     # via
     #   g4f
     #   webscout
-orjson==3.10.12
+numpy==2.2.2
+    # via -r requirements.in
+orjson==3.10.15
     # via webscout
 outcome==1.3.0.post0
     # via
@@ -204,7 +208,7 @@ parse-type==0.6.4
     #   seleniumbase
 pdbp==1.6.1
     # via seleniumbase
-pillow==11.0.0
+pillow==11.1.0
     # via
     #   -r requirements.in
     #   pyscreeze
@@ -218,7 +222,7 @@ pluggy==1.5.0
     #   seleniumbase
 poe-api-wrapper==1.3.6
     # via webscout
-prompt-toolkit==3.0.48
+prompt-toolkit==3.0.50
     # via googlebard1
 propcache==0.2.1
     # via
@@ -230,7 +234,7 @@ pycparser==2.22
     # via cffi
 pycryptodome==3.21.0
     # via g4f
-pydantic==2.10.4
+pydantic==2.10.6
     # via
     #   -r requirements.in
     #   fastapi
@@ -239,7 +243,7 @@ pydantic-core==2.27.2
     # via pydantic
 pygetwindow==0.0.9
     # via pyautogui
-pygments==2.18.0
+pygments==2.19.1
     # via
     #   pdbp
     #   rich
@@ -326,19 +330,19 @@ rich==13.9.4
     #   seleniumbase
     #   typer
     #   webscout
-rich-toolkit==0.12.0
+rich-toolkit==0.13.2
     # via fastapi-cli
-ruamel-yaml==0.18.6
+ruamel-yaml==0.18.10
     # via -r requirements.in
 ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
 sbvirtualdisplay==1.4.0
     # via seleniumbase
-selenium==4.27.1
+selenium==4.28.1
     # via
     #   seleniumbase
     #   webscout
-seleniumbase==4.33.12
+seleniumbase==4.34.9
     # via -r requirements.in
 shellingham==1.5.4
     # via typer
@@ -367,9 +371,9 @@ soupsieve==2.6
     #   seleniumbase
 spinners==0.0.24
     # via halo
-sse-starlette==2.2.0
+sse-starlette==2.2.1
     # via webscout
-starlette==0.41.3
+starlette==0.45.3
     # via
     #   fastapi
     #   sse-starlette
@@ -391,7 +395,7 @@ tls-client==1.0.1
     #   webscout
 tqdm==4.67.1
     # via webscout
-trio==0.27.0
+trio==0.28.0
     # via
     #   selenium
     #   seleniumbase
@@ -405,6 +409,7 @@ typer==0.15.1
 typing-extensions==4.12.2
     # via
     #   anyio
+    #   beautifulsoup4
     #   curl-cffi
     #   fastapi
     #   pydantic
@@ -424,7 +429,9 @@ uvicorn[standard]==0.34.0
     #   fastapi-cli
 uvloop==0.21.0
     # via uvicorn
-watchfiles==1.0.3
+wasmtime==29.0.0
+    # via -r requirements.in
+watchfiles==1.0.4
     # via uvicorn
 wcwidth==0.2.13
     # via prompt-toolkit
@@ -438,7 +445,7 @@ websocket-client==1.8.0
     #   poe-api-wrapper
     #   selenium
     #   seleniumbase
-websockets==14.1
+websockets==14.2
     # via
     #   seleniumbase
     #   uvicorn
