--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     environment:
       BASE_URL: http://llm-api-for-next-chat:5000/api/openai
       ANTHROPIC_URL: http://llm-api-for-next-chat:5000/api/anthropic
+      DEEPSEEK_URL: http://llm-api-for-next-chat:5000/api/openai/v1
       CUSTOM_MODELS: "-all,\
         o3-mini@OpenAI,\
         o1-preview@OpenAI,\
@@ -37,16 +38,17 @@ services:
         gemma-2-27b@Gemma,\
         gemma-2-9b@Gemma,\
         learnlm-1.5-pro-experimental@Google,\
-        gemini-exp-1206@Google,\
+        gemini-2.0-pro-exp-02-05@Google,\
         gemini-1.5-pro-latest@Google,\
-        gemini-2.0-flash-thinking-exp-1219@Google,\
-        gemini-2.0-flash-exp@Google,\
+        gemini-2.0-flash-thinking-exp-01-21@Google,\
+        gemini-2.0-flash@Google,\
         gemini-1.5-flash-latest@Google,\
         gemini-1.5-flash-8b-latest@Google,\
-        claude-3-5-sonnet-20240620@Anthropic,\
-        claude-3-opus-20240229@Anthropic,\
-        claude-3-sonnet-20240229@Anthropic,\
-        claude-3-haiku-20240307@Anthropic,\
+        claude-3-7-sonnet@Anthropic,\
+        claude-3-7-sonnet-thinking@Anthropic,\
+        claude-3-5-sonnet@Anthropic,\
+        claude-3-opus@Anthropic,\
+        claude-3-sonnet@Anthropic,\
         llama-3.1-405b@Meta,\
         llama-3.1-70b@Meta,\
         llama-3.1-8b@Meta,\
@@ -63,9 +65,9 @@ services:
         qwen-1.5-32b@Qwen,\
         qwen-1.5-14b@Qwen,\
         qwen-1.5-7b@Qwen,\
-        deepseek-llm-67b@DeepSeek,\
         deepseek-chat@DeepSeek,\
         yi-34b@01.AI,\
+        theb-ai-4.0@TheB.AI,\
         theb-ai@TheB.AI,\
         qwen2.5-72b-instruct@Qwen,\
         llama-3.3-70b-instruct@Meta,\
