--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - llms_api
 
   chatgpt-next-web:
-    image: yidadaa/chatgpt-next-web
+    image: yidadaa/chatgpt-next-web:v2.15.7
     container_name: chatgpt-next-web
     restart: unless-stopped
     ports:
