--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile
 #
-aiohappyeyeballs==2.4.4
+aiohappyeyeballs==2.4.6
     # via aiohttp
-aiohttp==3.11.12
+aiohttp==3.11.13
     # via
     #   -r requirements.in
     #   g4f
@@ -68,7 +68,7 @@ colorama==0.4.6
     #   seleniumbase
 cssselect==1.2.0
     # via seleniumbase
-curl-cffi==0.7.4
+curl-cffi==0.9.0
     # via webscout
 dbus-next==0.2.3
     # via clipman
@@ -78,7 +78,7 @@ docstring-inheritance==2.2.2
     # via webscout
 email-validator==2.2.0
     # via fastapi
-environs==14.1.0
+environs==14.1.1
     # via -r requirements.in
 exceptiongroup==1.2.2
     # via seleniumbase
@@ -88,7 +88,7 @@ execnet==2.1.1
     #   seleniumbase
 fake-useragent==2.0.3
     # via -r requirements.in
-fastapi[standard]==0.115.8
+fastapi[standard]==0.115.11
     # via -r requirements.in
 fastapi-cli[standard]==0.0.7
     # via fastapi
@@ -102,7 +102,7 @@ frozenlist==1.5.0
     # via
     #   aiohttp
     #   aiosignal
-g4f==0.4.5.4
+g4f==0.4.7.7
     # via webscout
 googlebard1==2.1.4
     # via webscout
@@ -150,13 +150,13 @@ log-symbols==0.0.14
     # via halo
 loguru==0.7.3
     # via poe-api-wrapper
-lxml==5.3.0
+lxml==5.3.1
     # via webscout
 markdown-it-py==3.0.0
     # via
     #   rich
     #   seleniumbase
-markdownify==0.14.1
+markdownify==1.0.0
     # via webscout
 markupsafe==3.0.2
     # via
@@ -180,7 +180,7 @@ nest-asyncio==1.6.0
     # via
     #   g4f
     #   webscout
-numpy==2.2.2
+numpy==2.2.3
     # via -r requirements.in
 orjson==3.10.15
     # via webscout
@@ -188,6 +188,7 @@ outcome==1.3.0.post0
     # via
     #   seleniumbase
     #   trio
+    #   trio-websocket
 packaging==24.2
     # via
     #   marshmallow
@@ -224,7 +225,7 @@ poe-api-wrapper==1.3.6
     # via webscout
 prompt-toolkit==3.0.50
     # via googlebard1
-propcache==0.2.1
+propcache==0.3.0
     # via
     #   aiohttp
     #   yarl
@@ -250,7 +251,7 @@ pygments==2.19.1
     #   seleniumbase
 pymsgbox==1.0.9
     # via pyautogui
-pynose==1.5.3
+pynose==1.5.4
     # via seleniumbase
 pyotp==2.9.0
     # via seleniumbase
@@ -338,11 +339,11 @@ ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
 sbvirtualdisplay==1.4.0
     # via seleniumbase
-selenium==4.28.1
+selenium==4.29.0
     # via
     #   seleniumbase
     #   webscout
-seleniumbase==4.34.9
+seleniumbase==4.35.2
     # via -r requirements.in
 shellingham==1.5.4
     # via typer
@@ -373,7 +374,7 @@ spinners==0.0.24
     # via halo
 sse-starlette==2.2.1
     # via webscout
-starlette==0.45.3
+starlette==0.46.0
     # via
     #   fastapi
     #   sse-starlette
@@ -385,7 +386,7 @@ termcolor==2.5.0
     # via
     #   halo
     #   webscout
-tiktoken==0.8.0
+tiktoken==0.9.0
     # via webscout
 tldextract==5.1.3
     # via webscout
@@ -395,22 +396,21 @@ tls-client==1.0.1
     #   webscout
 tqdm==4.67.1
     # via webscout
-trio==0.28.0
+trio==0.29.0
     # via
     #   selenium
     #   seleniumbase
     #   trio-websocket
-trio-websocket==0.11.1
+trio-websocket==0.12.2
     # via
     #   selenium
     #   seleniumbase
-typer==0.15.1
+typer==0.15.2
     # via fastapi-cli
 typing-extensions==4.12.2
     # via
     #   anyio
     #   beautifulsoup4
-    #   curl-cffi
     #   fastapi
     #   pydantic
     #   pydantic-core
@@ -429,7 +429,7 @@ uvicorn[standard]==0.34.0
     #   fastapi-cli
 uvloop==0.21.0
     # via uvicorn
-wasmtime==29.0.0
+wasmtime==30.0.0
     # via -r requirements.in
 watchfiles==1.0.4
     # via uvicorn
@@ -445,7 +445,7 @@ websocket-client==1.8.0
     #   poe-api-wrapper
     #   selenium
     #   seleniumbase
-websockets==14.2
+websockets==15.0
     # via
     #   seleniumbase
     #   uvicorn
